examples/test/testpolicy10616.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10616
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key49: value16
      key25: value9
      key0: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value17
      podSelector:
        matchLabels:
          key28: value9
          key7: value2
          key18: value13
